	* make files deleted alert non-discardable
	* make built-in sha functions not conflict with libcrypto
	* improve web seed hash failure case
	* improve DHT lookup times
	* uTP path MTU discovery improvements
	* optimized the torrent creator optimizer to scale significantly better with more files
	* fix uTP edge case where udp socket buffer fills up
	* fix nagle implementation in uTP

	* fix issue when loading certain malformed .torrent files
	* pass along host header with http proxy requests and possible http_connection shutdown hang

0.16.12 release

	* fix building with C++11
	* fix IPv6 support in UDP socket (uTP)
	* fix mingw build issues
	* increase max allowed outstanding piece requests from peers
	* uTP performance improvement. only fast retransmit one packet at a time
	* improve error message for 'file too short'
	* fix piece-picker stat bug when only selecting some files for download
	* fix bug in async_add_torrent when settings file_priorities
	* fix boost-1.42 support for python bindings
	* fix memory allocation issue (virtual addres space waste) on windows

0.16.11 release

	* fix web seed URL double escape issue
	* fix string encoding issue in alert messages
	* fix SSL authentication issue
	* deprecate std::wstring overloads. long live utf-8
	* improve time-critical pieces feature (streaming)
	* introduce bandwidth exhaustion attack-mitigation in allowed-fast pieces
	* python binding fix issue where torrent_info objects where destructing when their torrents were deleted
	* added missing field to scrape_failed_alert in python bindings
	* GCC 4.8 fix
	* fix proxy failure semantics with regards to anonymous mode
	* fix round-robin seed-unchoke algorithm
	* add bootstrap.sh to generage configure script and run configure
	* fix bug in SOCK5 UDP support
	* fix issue where torrents added by URL would not be started immediately

0.16.10 release

	* fix encryption level handle invalid values
	* add a number of missing functions to the python binding