@@ -830,8 +830,11 @@ namespace libtorrent
 #ifdef TORRENT_DEBUG
 		else
 		{
-			std::pair<iterator, iterator> range = find_peers(p->address());
-			TORRENT_ASSERT(std::distance(range.first, range.second) == 1);
+			if (!p->is_i2p_addr)
+			{
+				std::pair<iterator, iterator> range = find_peers(p->address());
+				TORRENT_ASSERT(std::distance(range.first, range.second) == 1);
+			}
 		}
 #endif
 
